// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render properly: checked 1`] = `
<a
  aria-checked={true}
  className="display-inline-flex-center link-radio"
  href="#"
  onClick={[Function]}
  role="radio"
>
  <i
    className="icon-radio spacer-right is-checked"
  />
</a>
`;

exports[`should render properly: not checked 1`] = `
<a
  aria-checked={false}
  className="display-inline-flex-center link-radio"
  href="#"
  onClick={[Function]}
  role="radio"
>
  <i
    className="icon-radio spacer-right"
  />
</a>
`;
